Slimmed down README and s/SeqWare/Niassa/